--- a/scss/blocks/_start.scss
+++ b/scss/blocks/_start.scss
@@ -32,8 +32,14 @@
   }
 }
 @include responsive(700) {
+  .start {
+    padding-top: 83px;
+    padding-bottom: 83px;
+  }
   .start__container {
     flex-direction: column;
+    padding-left: 100px;
+    padding-right: 100px;
   }
   .start__header {
     text-align: center;
